fixed a problem with row gap in project board container

--- a/src/containers/Project/Project.scss
+++ b/src/containers/Project/Project.scss
@@ -216,7 +216,6 @@
         height: auto;
 
         display: grid;
-        grid-template-rows: repeat(3, auto);
         row-gap: 40px;
     }
 
